Added the login function, changed the info tag to login tag

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li><a class="navbar-brand" href="search.html">Search</a></li>
         <li><a class="navbar-brand" href="update.html">Update</a></li>
         <li><a class="navbar-brand" href="delete.html">Delete</a></li>
-        <li><a class="navbar-brand" href="infoPage.html">Info</a></li>
+        <li><a class="navbar-brand" href="login.html">Login</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
