--- a/delete.html
+++ b/delete.html
@@ -41,7 +41,7 @@
                </select>
              </form>
            <li>
-           <li><a class="navbar-brand" href="infoPage.html">Info</a></li>
+           <li><a class="navbar-brand" href="login.html">Login</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
