--- a/search.html
+++ b/search.html
@@ -41,7 +41,7 @@
       <li>
       <li><a class="navbar-brand" href="update.html">Update</a></li>
       <li><a class="navbar-brand" href="delete.html">Delete</a></li>
-      <li><a class="navbar-brand" href="infoPage.html">Info</a></li>
+      <li><a class="navbar-brand" href="login.html">Login</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
