--- a/update.html
+++ b/update.html
@@ -42,7 +42,7 @@
             </form>
           <li>
           <li><a class="navbar-brand" href="delete.html">Delete</a></li>
-          <li><a class="navbar-brand" href="infoPage.html">Info</a></li>
+          <li><a class="navbar-brand" href="login.html">Login</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
