--- a/login.html
+++ b/login.html
@@ -26,11 +26,11 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-      <li><a class="navbar-brand"href="index.html">Home</a></li>
-           <li><a class="navbar-brand" href="insert.html">Insert</a></li>
-           <li><a class="navbar-brand" href="search.html">Search</a></li>
-           <li><a class="navbar-brand" href="update.html">Update</a></li>
-           <li><a class="navbar-brand" href="delete.html">Delete</a></li>
+      <li><a class="navbar-brand"href="index.php">Home</a></li>
+           <li><a class="navbar-brand" href="login.html">Insert</a></li>
+           <li><a class="navbar-brand" href="login.html">Search</a></li>
+           <li><a class="navbar-brand" href="login.html">Update</a></li>
+           <li><a class="navbar-brand" href="login.html">Delete</a></li>
            <li><a class="navbar-brand" href="login.html" style="color:black;">Login</a></li> 
       </ul>
     </div><!-- /.navbar-collapse -->
@@ -41,13 +41,13 @@
   <!-- Begin Sample Entry Form -->
   </br>
   </br>
-  <form name="sampForm" id="sampForm" action="php/login.php" method="post" class="form-container">
-    <legend style="color:white;">Sample Information:</legend>
+  <form name="loginForm" id="loginForm" action="php/login.php" method="post" class="form-container">
+    <legend style="color:white;">Login</legend>
     <fieldset>
     <label>Username:</label>
     <input class="form-field" type="text" name="username" maxlength="15"size="25" required placeholder="Enter Username" />
     <label>Password: </label>
-    <input class="form-field" type="text" name="password" maxlength="15"size="25" required placeholder="Enter Password" />
+    <input class="form-field" type="password" name="password" maxlength="15"size="25" required placeholder="Enter Password" />
     </fieldset>
     <fieldset>
     <input class="submit-button" type="submit" value="Submit"/>
