--- a/index.html
+++ b/index.html
@@ -25,18 +25,12 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-      <li><a class="navbar-brand" href="index.html" style="color:black;">Home</a></li>
-        <li><a class="navbar-brand" href="insert.html">Insert</a></li>
-        <li><a class="navbar-brand" href="search.html">Search</a></li>
-        <li><a class="navbar-brand" href="update.html">Update</a></li>
-        <li><a class="navbar-brand" href="delete.html">Delete</a></li>
-        <?php 
-            session_start();
-            if(!isset$_SESSION['in'])
-                echo "<li><a class="navbar-brand" href="login.html">Login</a></li>";
-            else
-                echo "<li><a class="navbar-brand" href="login.html">Logout</a></li>";
-        ?>
+      <li><a class="navbar-brand" href="index.php" style="color:black;">Home</a></li>
+        <li><a class="navbar-brand" href="login.html">Insert</a></li>
+        <li><a class="navbar-brand" href="login.html">Search</a></li>
+        <li><a class="navbar-brand" href="login.html">Update</a></li>
+        <li><a class="navbar-brand" href="login.html">Delete</a></li>
+        <li><a class="navbar-brand" href="login.html">Login</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
